No7/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cobol-app-service
spec:
  selector:
    app: cobol-app
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
